exports[`test Button enabled if username and password are filled 1`] = `
<View
  accessibilityLabel="Login View"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }>
  <Image
    resizeMode="contain"
    source={1}
    style={
      Object {
        "height": 150,
        "marginTop": 15,
        "width": 550,
      }
    } />
  <BuiltTextfield
    accessibilityLabel="Username Input"
    blurOnSubmit={true}
    floatingLabelEnabled={true}
    highlightColor="#CDDC39"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Username"
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    underlineEnabled={true}
    value="mrMeeseeks" />
  <BuiltTextfield
    accessibilityLabel="Password Input"
    blurOnSubmit={true}
    floatingLabelEnabled={true}
    highlightColor="#CDDC39"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    password={true}
    placeholder="Password"
    secureTextEntry={true}
    selectTextOnFocus={true}
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    underlineEnabled={true}
    value="Look at me" />
  <BuiltButton
    backgroundColor="#3F51B5"
    enabled={true}
    maskBorderRadius={2}
    maskColor="rgba(255,255,255,0.15)"
    maskDuration={200}
    maskEnabled={true}
    onPress={[Function]}
    pointerEvents="box-only"
    rippleColor="rgba(255,255,255,0.2)"
    rippleDuration={200}
    rippleLocation="tapLocation"
    shadowAniEnabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#3F51B5",
        },
        Object {
          "borderRadius": 2,
          "elevation": 4,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.7,
          "shadowRadius": 1,
        },
        Object {
          "marginVertical": 5,
        },
      ]
    }
    text="Login"
    textStyle={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "white",
          "fontWeight": "bold",
        },
      ]
    } />
  <BuiltButton
    backgroundColor="#3F51B5"
    enabled={true}
    maskBorderRadius={2}
    maskColor="rgba(255,255,255,0.15)"
    maskDuration={200}
    maskEnabled={true}
    onPress={[Function]}
    pointerEvents="box-only"
    rippleColor="rgba(255,255,255,0.2)"
    rippleDuration={200}
    rippleLocation="tapLocation"
    shadowAniEnabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#3F51B5",
        },
        Object {
          "borderRadius": 2,
          "elevation": 4,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.7,
          "shadowRadius": 1,
        },
        Object {
          "marginVertical": 5,
        },
      ]
    }
    text="Sign in"
    textStyle={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "white",
          "fontWeight": "bold",
        },
      ]
    } />
  <TouchableOpacity
    accessibilityLabel="Skip login"
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      Not Now
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`test renders correctly 1`] = `
<View
  accessibilityLabel="Login View"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }>
  <Image
    resizeMode="contain"
    source={1}
    style={
      Object {
        "height": 150,
        "marginTop": 15,
        "width": 550,
      }
    } />
  <BuiltTextfield
    accessibilityLabel="Username Input"
    blurOnSubmit={true}
    floatingLabelEnabled={true}
    highlightColor="#CDDC39"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Username"
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    underlineEnabled={true}
    value="" />
  <BuiltTextfield
    accessibilityLabel="Password Input"
    blurOnSubmit={true}
    floatingLabelEnabled={true}
    highlightColor="#CDDC39"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    password={true}
    placeholder="Password"
    secureTextEntry={true}
    selectTextOnFocus={true}
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    underlineEnabled={true}
    value="" />
  <BuiltButton
    backgroundColor="#3F51B5"
    enabled={false}
    maskBorderRadius={2}
    maskColor="rgba(255,255,255,0.15)"
    maskDuration={200}
    maskEnabled={true}
    onPress={[Function]}
    pointerEvents="box-only"
    rippleColor="rgba(255,255,255,0.2)"
    rippleDuration={200}
    rippleLocation="tapLocation"
    shadowAniEnabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#3F51B5",
        },
        Object {
          "borderRadius": 2,
          "elevation": 4,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.7,
          "shadowRadius": 1,
        },
        Object {
          "marginVertical": 5,
        },
      ]
    }
    text="Login"
    textStyle={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "white",
          "fontWeight": "bold",
        },
      ]
    } />
  <BuiltButton
    backgroundColor="#3F51B5"
    enabled={true}
    maskBorderRadius={2}
    maskColor="rgba(255,255,255,0.15)"
    maskDuration={200}
    maskEnabled={true}
    onPress={[Function]}
    pointerEvents="box-only"
    rippleColor="rgba(255,255,255,0.2)"
    rippleDuration={200}
    rippleLocation="tapLocation"
    shadowAniEnabled={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#3F51B5",
        },
        Object {
          "borderRadius": 2,
          "elevation": 4,
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.7,
          "shadowRadius": 1,
        },
        Object {
          "marginVertical": 5,
        },
      ]
    }
    text="Sign in"
    textStyle={
      Array [
        Object {
          "fontSize": 14,
        },
        Object {
          "color": "white",
          "fontWeight": "bold",
        },
      ]
    } />
  <TouchableOpacity
    accessibilityLabel="Skip login"
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      Not Now
    </Text>
  </TouchableOpacity>
</View>
`;
